<resources>
    <string name="app_name">Khatabook</string>
    <string name="english">English</string>
    <string name="bottomText">Trusted by 2 Crore+ business across India</string>
    <string name="khatabook">Khatabook</string>
    <string name="manage_your_business_send">Manage your business: Send</string>
    <string name="remainders_and_receive_payments">remainders and receive payments !</string>
    <string name="start_using_khatabook">START USING KHATABOOK</string>
    <string name="by_logging_in_you_agree_to_our">By logging-in you agree to our </string>
    <string name="privacy_policy"> Privacy Policy</string>
    <string name="video_2">Business Loan Documents Required by Banks, NBFCs and Lenders in India</string>
    <string name="video_3">Types of Bank Loans for Business</string>
    <string name="video_4">  Pradhan Mantri MUDRA Yojana</string>
    <string name="video_5">Pradhan Mantri MUDRA Yojana</string>
    <string name="video_6">How to choose the best loan option?</string>
    <string name="amp"><![CDATA[&]]></string>
    <string name="t_amp_c"><![CDATA[T&C]]></string>
    <string name="evaluate_obligations_before_loan_process">Evaluate Obligations before Loan process</string>
    <string name="khatabook">Khatabook</string>
    <string name="languages">Languages</string>
</resources>